--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
   <!-- Open Graph-->
   <meta property="og:locale" content="en_US" />
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Varad Bhogayata | Software Developer" />
+  <meta property="og:title" content="Prince Kumar | Software Developer" />
   <meta property="og:description" content="Software Developer" />
-  <meta property="og:url" content="https://varadbhogayata.github.io/" />
-  <meta property="og:site_name" content="Varad Bhogayata | Software Developer" />
-  <meta property="article:publisher" content="https://varadbhogayata.github.io/" />
+  <meta property="og:url" content="https://princegup678.github.io/" />
+  <meta property="og:site_name" content="Prince Kumar | Software Developer" />
+  <meta property="article:publisher" content="https://princegup678.github.io/" />
   <meta property="og:image" content="https://varadbhogayata.github.io/examples/preview.JPG" />
   <!-- Twitter -->
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@varad_bhogayata" />
   <meta name="twitter:title" content="Coder | Technofreak | Explorer | Minimalist | Humane" />
   <meta name="twitter:description" content="Software Developer" />
-  <meta name="twitter:url" content="https://twitter.com/varad_bhogayata" />
-  <meta name="author" content="Varad Bhogayata" />
+  <meta name="twitter:url" content="https://twitter.com/PrinceK49898019" />
+  <meta name="author" content="Prince Kumar" />
   <meta name="description" content="Software Developer with a passion for backend development and artificial intelligence." />
   <link rel="apple-touch-icon" sizes="57x57" href="/assets/img/favicon/apple-icon-57x57.png" />
   <link rel="apple-touch-icon" sizes="60x60" href="/assets/img/favicon/apple-icon-60x60.png" />
@@ -193,7 +193,7 @@
             class="mdi-content-mail small"></i><span>Contact</span></a>
       </li>
       <li class="bold">
-        <a aria-label="Open Varad's Resume in a new tab"
+        <a aria-label="Open Prince's Resume in a new tab"
           href="https://drive.google.com/file/d/1B6MZ1z0-7NsefC3Lm_q-uhib28MTqpE9/view?usp=sharing" target="_blank"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
       </li>
@@ -232,7 +232,7 @@
                 </button>
               </a> -->
 
-              <!-- <a href="http://linkedin.com/in/varadbhogayata" target="_blank">
+              <!-- <a href="https://www.linkedin.com/in/princegup678/" target="_blank">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -345,40 +345,37 @@
           <div class="card-content">
             <div class="row">
               <div class="col s12 m2">
-                <a href="https://www.meditab.com" target="_blank"><img alt="Meditab logo"
+                <a href="https://techvardhan.com/" target="_blank"><img alt="vardhan logo"
                     src="/assets/img/exp-meditab-logo-500x500.jpg" class="responsive-img center-block" /></a>
               </div>
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
                 <p>
-                  <span class="card-title"><a href="http://meditab.com" target="_blank"
-                      class="teal-text hoverline">Meditab</a></span>
+                  <span class="card-title"><a href="https://techvardhan.com/" target="_blank"
+                      class="teal-text hoverline">Vardhan Consulting Engineers</a></span>
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Programmer Analyst</div>
+            <div class="role brown-text text-darken-2">Data Analyst</div>
             <ul>
               <li>
-                Customized a tree-based optimization algorithm that separates drugs into distinct groups to maximize the concurrent execution of drug
-dispenser robots; improved an optimization algorithm that reduced the cycle-time of the automation process by 25%.
+                Learnt how to prepare the Financial Model.
               </li>
               <li>
-                Devised a customized recursion algorithm to extend the functionality of the current environment to a multi-robot and multi-system
-environment
+                Designed “Financial Modeling and Analysis of 50 Flats Housing Project in Gurgaon, Haryana IN”.
               </li>
               <li>
-                Built a modular video analytics app using Flask, OpenCV that tracks the location of each human in a multi-camera environment;
-utilized perspective transformation, object detection, and object tracking to find the location of a human.
+                Complete the Corporate Skill Development Program.
               </li>
-              <li>Increased the speed of the video analytics app by 20% by using a customized YOLOv3 algorithm to perform object detection and
-                DeepSORT algorithm for multi-object tracking.</li>
+              <li>Used SQL queries to fetch the data from database, also used Python to visualize data.
+              </li>
               <li>
-                <b>Tools:</b> Python, Flask, OpenCV, Keras, Tensorflow, PyTorch
+                <b>Tools:</b> Python, My Sql, Ms-Excel
               </li>
             </ul>
           </div>
           <div class="card-action">
-            <span>Dec 2018 - July 2019 | Ahmedabad, India</span>
+            <span>July 2020 - Aug 2020 | Patna, India </span>
           </div>
         </div>
 
