--- a/index.html
+++ b/index.html
@@ -913,13 +913,13 @@ of each drug container to estimate the degradation of the drug.
             <div class="card">
               <div class="card-content">
                 <p>
-                  <span class="card-title"><a href="https://www.asu.edu/" target="_blank" class="teal-text hoverline">Arizona State University</a></span>
+                  <span class="card-title"><a href="https://www.iitism.ac.in/" target="_blank" class="teal-text hoverline">IIT(ISM) Dhanbad</a></span>
                 </p>
-                <p class="brown-text">Tempe, USA</p>
+                <p class="brown-text">Dhanbad, India</p>
                 <p>
-                  <b>Degree: </b>Master of Science in Computer Science      
+                  <b>Degree: </b>Bachelor of Technology in Mechanical Engineering      
                   <br>
-                  <b>CGPA: </b>4.0/4.0
+                  <b>CGPA: </b>7.41/10.0
                 </p>
 
                 <ul>
