--- a/index.html
+++ b/index.html
@@ -919,6 +919,8 @@ of each drug container to estimate the degradation of the drug.
                 <p>
                   <b>Degree: </b>Bachelor of Technology in Mechanical Engineering      
                   <br>
+                  <b>Batch: </b> July 2018 - May 2022
+                  <br>
                   <b>CGPA: </b>7.41/10.0
                 </p>
 
