--- a/index.html
+++ b/index.html
@@ -934,29 +934,19 @@ of each drug container to estimate the degradation of the drug.
             <div class="card">
               <div class="card-content">
                 <p>
-                  <span class="card-title"><a href="https://ahduni.edu.in/academics/schools-centres/school-of-engineering-and-applied-science/" target="_blank" class="teal-text hoverline">School of Engineering and Applied Science, Ahmedabad
-                      University</a></span>
+                  <span class="card-title"><a href="http://chinmayabokaro.org/" target="_blank" class="teal-text hoverline">Chinmaya Vidyalaya Bokaro
+                    </a></span>
                 </p>
-                <p class="brown-text">Ahmedabad, India</p>
+                <p class="brown-text">Bokaro Steel City, India</p>
                 <p>
-                  <b>Degree: </b>Bachelor of Technology in Information and Communication Technology
+                  <b>Degree: </b>Science (Physics, Chemistry, Maths)
                   <br>
-                  <b>CGPA: </b>3.13/4.33
+                  <b>Batch : </b> April 2015 - March 2017
+                  <br>
+                  <b>Percentage: </b>87% / 100%
                 </p>
 
-                <ul>
-                  <p>
-                    <b>Relevant Courseworks:</b>
-                  <ul>
-                    <li>Data Structures and Algorithms</li>
-                    <li>Database Management Systems</li>
-                    <li>Operating Systems</li>
-                    <li>Machine Learning</li>
-                    <li>Computer Vision</li>
-                  </ul>
-                  </p>
-
-                </ul>
+       
               </div>
             </div>
           </div>
