--- a/index.html
+++ b/index.html
@@ -939,9 +939,9 @@ of each drug container to estimate the degradation of the drug.
                 </p>
                 <p class="brown-text">Bokaro Steel City, India</p>
                 <p>
-                  <b>Degree: </b>Science (Physics, Chemistry, Maths)
+                  <b>Degree: </b>Senior Secondary in Science (Physics, Chemistry, Maths)
                   <br>
-                  <b>Batch : </b> April 2015 - March 2017
+                  <b>Batch: </b> April 2015 - March 2017
                   <br>
                   <b>Percentage: </b>87% / 100%
                 </p>
@@ -959,29 +959,29 @@ of each drug container to estimate the degradation of the drug.
       <h3 class="page-title white-text teal">Contact</h3>
       <div class="container">
         <p>
-          <a aria-label="Call Varad" data-position="top" data-tooltip="Call Varad"
+          <a aria-label="Call Prince" data-position="top" data-tooltip="Call Prince"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-phone"></i><a
-              aria-label="Call Varad">+14805722456</a></a>
+              aria-label="Call Prince">+91 9934513514</a></a>
         </p>
         <p>
-          <a aria-label="Email Varad" href="mailto:vbhogayata@gmail.com" target="_blank" data-position="top"
-            data-tooltip="Email Varad" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-envelope"></i><a aria-label="Email Varad" href="mailto:vbhogayata@gmail.com"
-              class="hoverline">vbhogayata@gmail.com</a></a>
+          <a aria-label="Email Prince" href="mailto:princegup678@gmail.com" target="_blank" data-position="top"
+            data-tooltip="Email Prince" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+              class="fa fa-envelope"></i><a aria-label="Email Prince" href="mailto:princegup678@gmail.com"
+              class="hoverline">princegup678@gmail.com</a></a>
         </p>
         <p>
-          <a aria-label="View Varad on GitHub" href="http://github.com/varadbhogayata" target="_blank"
-            data-position="top" data-tooltip="View Varad on GitHub"
+          <a aria-label="View Prince on GitHub" href="https://github.com/princegup678" target="_blank"
+            data-position="top" data-tooltip="View Prince on GitHub"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-github"></i><a
-              aria-label="Varad on Github" href="http://github.com/varadbhogayata" class="hoverline"
-              target="_blank">github.com/varadbhogayata</a></a>
+              aria-label="Prince on Github" href="https://github.com/princegup678" class="hoverline"
+              target="_blank">github.com/princegup678</a></a>
         </p>
         <p>
-          <a aria-label="View Varad on LinkedIn" href="http://linkedin.com/in/varadbhogayata" target="_blank"
-            data-position="top" data-tooltip="View Varad on LinkedIn"
+          <a aria-label="View Prince on LinkedIn" href="https://www.linkedin.com/in/princegup678/" target="_blank"
+            data-position="top" data-tooltip="View Prince on LinkedIn"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-linkedin"></i><a aria-label="Varad on LinkedIn" href="http://linkedin.com/in/varadbhogayata"
-              class="hoverline" target="_blank">linkedin.com/in/varadbhogayata</a></a>
+              class="fa fa-linkedin"></i><a aria-label="Varad on LinkedIn" href="https://www.linkedin.com/in/princegup678/"
+              class="hoverline" target="_blank">linkedin.com/in/princegup678</a></a>
         </p>
       </div>
     </section>
