--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <meta property="og:image" content="https://varadbhogayata.github.io/examples/preview.JPG" />
   <!-- Twitter -->
   <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="@varad_bhogayata" />
+  <meta name="twitter:site" content="@princegup678" />
   <meta name="twitter:title" content="Coder | Technofreak | Explorer | Minimalist | Humane" />
   <meta name="twitter:description" content="Software Developer" />
   <meta name="twitter:url" content="https://twitter.com/PrinceK49898019" />
@@ -980,7 +980,7 @@ of each drug container to estimate the degradation of the drug.
           <a aria-label="View Prince on LinkedIn" href="https://www.linkedin.com/in/princegup678/" target="_blank"
             data-position="top" data-tooltip="View Prince on LinkedIn"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-linkedin"></i><a aria-label="Varad on LinkedIn" href="https://www.linkedin.com/in/princegup678/"
+              class="fa fa-linkedin"></i><a aria-label="Prince on LinkedIn" href="https://www.linkedin.com/in/princegup678/"
               class="hoverline" target="_blank">linkedin.com/in/princegup678</a></a>
         </p>
       </div>
