--- a/index.html
+++ b/index.html
@@ -384,38 +384,75 @@
           <div class="card-content">
             <div class="row">
               <div class="col s12 m2">
-                <img alt="Mtag logo" src="/assets/img/exp-mtag-logo-250x250.jpg" class="responsive-img center-block" />
+                <img alt="Xpert logo" src="/assets/img/exp-mtag-logo-250x250.jpg" class="responsive-img center-block" />
 
               </div>
 
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
                 <p>
-                  <span class="card-title"><a href="#experience" class="teal-text hoverline">Mtag
-                      Innovations</a></span>
+                  <span class="card-title"><a href="https://www.xpert.chat/" class="teal-text hoverline">XPERT- Learn from the best</a></span>
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Software Developer</div>
+            <div class="role brown-text text-darken-2">Marketing Intern </div>
             <ul>
               <li>
-                Programmed a cloud-based web app using Flask and JavaScript aimed at storing, visualizing, and tracking temperature and humidity
-of each drug container to estimate the degradation of the drug.
+                Worked with Xpert as a Social Media Marketing Intern for a duration of four weeks in summer vacation.
               </li>
               <li>
-                Created an alert system to send notifications and emails when the parameters exceed the threshold.
+                My job responsibilities working in the following areas - Market Research, Content Development, Social Media Promotion, Lead Prospecting, Direct Marketing. 
               </li>
               <li>
-                <b>Tools:</b> Python, Flask, JavaScript
+                 I learned how to work in these fields and also got ideas to make some strategies for marketing.
               </li>
             </ul>
           </div>
           <div class="card-action">
-            <span>July 2018 - Nov 2018 | Ahmedabad, India</span>
+            <span>May 2020 - June 2020 | Work From Home</span>
           </div>
         </div>
 
         <!-- Experience 3 -->
+        <div class="card">
+          <div class="card-content">
+            <div class="row">
+              <div class="col s12 m2">
+                <a href="https://www.cignex.com" target="_blank"><img alt="Cignex logo"
+                    src="/assets/img/exp-cignex-logo.png" class="responsive-img center-block" /></a>
+              </div>
+              <div class="col s12 m10">
+                <p>
+                  <span class="card-title"><a href="https://www.cignex.com" target="_blank"
+                      class="teal-text hoverline">CIGNEX
+                      Datamatics </a></span>
+                </p>
+              </div>
+            </div>
+            <div class="role brown-text text-darken-2">Project Trainee</div>
+            <ul>
+              <li>
+                Designed a library management system for a local library, where we undertook activities like requirement
+                elicitation, preparing Data Flow
+                and Entity-Relationship diagrams.
+              </li>
+              <li>
+                Delivered a solution for a POC involving Automatic Financial Document Classifier using Natural Language
+                Processing and Support Vector
+                Machines with 96% accuracy on the company’s data.
+              </li>
+              <li>
+                <b>Tools:</b> Python, Scikit-learn, NLTK
+              </li>
+            </ul>
+          </div>
+          <div class="card-action">
+            <span>June 2017 - July 2017 | Ahmedabad, India</span>
+          </div>
+        </div>
+
+      </div>
+      <!-- Experience 3 -->
         <div class="card">
           <div class="card-content">
             <div class="row">
