--- a/index.html
+++ b/index.html
@@ -418,36 +418,29 @@
           <div class="card-content">
             <div class="row">
               <div class="col s12 m2">
-                <a href="https://www.cignex.com" target="_blank"><img alt="Cignex logo"
+                <a href="https://sail.co.in/en/plants/about-bokaro-steel-plant" target="_blank"><img alt="sail logo"
                     src="/assets/img/exp-cignex-logo.png" class="responsive-img center-block" /></a>
               </div>
               <div class="col s12 m10">
                 <p>
-                  <span class="card-title"><a href="https://www.cignex.com" target="_blank"
-                      class="teal-text hoverline">CIGNEX
-                      Datamatics </a></span>
+                  <span class="card-title"><a href="https://sail.co.in/en/plants/about-bokaro-steel-plant" target="_blank"
+                      class="teal-text hoverline">SAIL Bokaro
+                          </a></span>
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Project Trainee</div>
+            <div class="role brown-text text-darken-2">Vocational Training</div>
             <ul>
               <li>
-                Designed a library management system for a local library, where we undertook activities like requirement
-                elicitation, preparing Data Flow
-                and Entity-Relationship diagrams.
+                Vocational Training in Steel Authority of India Limited  (SAIL) Bokaro Steel city in winter vacation. 
               </li>
               <li>
-                Delivered a solution for a POC involving Automatic Financial Document Classifier using Natural Language
-                Processing and Support Vector
-                Machines with 96% accuracy on the company’s data.
-              </li>
-              <li>
-                <b>Tools:</b> Python, Scikit-learn, NLTK
+                Learnt about the mechanical testing of materials and metallurgical process, blast furnaces, tippler, and about the coke oven.
               </li>
             </ul>
           </div>
           <div class="card-action">
-            <span>June 2017 - July 2017 | Ahmedabad, India</span>
+            <span>Dec 2019 - Jan 2020 | Bokaro Steel City, India</span>
           </div>
         </div>
     </section>
