--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
             <div class="row">
               <div class="col s12 m2">
                 <a href="https://techvardhan.com/" target="_blank"><img alt="vardhan logo"
-                    src="/assets/img/exp-meditab-logo-500x500.jpg" class="responsive-img center-block" /></a>
+                    src="/assets/img/vardhan logo.png" class="responsive-img center-block" /></a>
               </div>
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
@@ -384,7 +384,7 @@
           <div class="card-content">
             <div class="row">
               <div class="col s12 m2">
-                <img alt="Xpert logo" src="/assets/img/exp-mtag-logo-250x250.jpg" class="responsive-img center-block" />
+                <img alt="Xpert logo" src="/assets/img/xpert logo.png" class="responsive-img center-block" />
 
               </div>
 
