--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
           <div class="card-content">
             <div class="row">
               <div class="col s12 m2">
-                <img alt="Xpert logo" src="/assets/img/xpertlogo.png" class="responsive-img center-block" />
+                <a href="https://www.xpert.chat/" target="_blank"><img alt="Xpert logo" src="/assets/img/xpertlogo.png" class="responsive-img center-block" /></a>
 
               </div>
 
