--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
             <div class="row">
               <div class="col s12 m2">
                 <a href="https://sail.co.in/en/plants/about-bokaro-steel-plant" target="_blank"><img alt="sail logo"
-                    src="/assets/img/exp-cignex-logo.png" class="responsive-img center-block" /></a>
+                    src="/assets/img/sail-logo.png" class="responsive-img center-block" /></a>
               </div>
               <div class="col s12 m10">
                 <p>
